fixed icons wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,12 +439,16 @@ section {
 
 .skills-icon{
   height: 90px;
-  width:auto;
+  width:90px;
   padding-bottom: 5px;
 }
 
 .note{
   font-size: 14px;
+}
+
+.skills-wrap{
+  flex-wrap: wrap;
 }
 
 /*--------------------------------------------------------------
